--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/carrauKrizaj/BETP2-2021C1-A/issues"
   },
-  "homepage": "https://github.com/carrauKrizaj/BETP2-2021C1-A#readme"
+  "homepage": "https://github.com/carrauKrizaj/BETP2-2021C1-A#readme",
+  "dependencies": {
+    "chalk": "^4.1.1"
+  }
 }
